chore: remover badge PDV do tapete capacho

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       {"@type":"ListItem","position":5,"item":{"@type":"Product","name":"Catálogos","image":"/public/assets/images/Catálogo.avif","url":"/#produtos"}},
       {"@type":"ListItem","position":6,"item":{"@type":"Product","name":"Wind Banner","image":"/public/assets/images/Display p Mesa.avif","url":"/#produtos"}},
       {"@type":"ListItem","position":7,"item":{"@type":"Product","name":"Móbiles","image":"/public/assets/images/Display p Mesa.avif","url":"/#produtos"}},
-      {"@type":"ListItem","position":8,"item":{"@type":"Product","name":"Tapete Capacho","image":"/public/assets/images/Tapete Capacho.avif","url":"/#produtos"}},
+      {"@type":"ListItem","position":8,"item":{"@type":"Product","name":"Tapete Capacho","image":"/public/assets/images/Tapete.avif","url":"/#produtos"}},
       {"@type":"ListItem","position":9,"item":{"@type":"Product","name":"Placa de PVC","image":"/public/assets/images/Placa PVC.avif","url":"/#produtos"}},
       {"@type":"ListItem","position":10,"item":{"@type":"Product","name":"Calendários","image":"/public/assets/images/Calendário.avif","url":"/#produtos"}},
       {"@type":"ListItem","position":11,"item":{"@type":"Product","name":"Display de PIX","image":"/public/assets/images/Display p Pix.avif","url":"/#produtos"}},
@@ -693,9 +693,9 @@
           </div>
 
           <!-- Tapete capacho -->
-          <div class="bg-white/95 rounded-2xl ring-1 ring-gray-100 p-5 hover:bg-gray-50 card-hover reveal" role="listitem" data-category="impressos">
+          <div class="bg-white/95 rounded-2xl ring-1 ring-gray-100 p-5 hover:bg-gray-50 card-hover reveal" role="listitem" data-category="pdv">
             <div class="mb-3 overflow-hidden rounded-lg bg-white aspect-square ring-1 ring-gray-200">
-              <img src="public/assets/images/Tapete capacho.avif" alt="Tapete capacho" class="w-full h-full object-cover section-image blur-up" loading="lazy" decoding="async" />
+              <img src="public/assets/images/Tapete.avif" alt="Tapete capacho" class="w-full h-full object-cover section-image blur-up" loading="lazy" decoding="async" />
             </div>
             <h3 class="text-lg font-semibold text-zapGray">Tapete capacho</h3>
             <p class="mt-2 text-zapGray/70 text-sm leading-relaxed">Recepcione seus clientes com charme e funcionalidade; excelente para divulgar sua identidade visual.</p>
@@ -896,5 +896,3 @@
   </div>
 </body>
 </html>
-
-
